--- a/frontend/src/components/LegendCard.css
+++ b/frontend/src/components/LegendCard.css
@@ -8,11 +8,11 @@
 .form {
     display: inline-block;
     flex-direction: row;
-    background-color: goldenrod;
+    background-image: url("https://media.istockphoto.com/vectors/vector-cartoon-background-with-color-abstract-dots-vector-id1350036914?k=20&m=1350036914&s=612x612&w=0&h=OeFrkRXKxYKgM-1pBh0pNFscmlX2Rv45MZltFaIqw6A=");
     justify-content: center;
     align-items: center;
     border: 2px solid #544e4e;
-    border-radius: 7px;
+    border-radius: 12px;
     box-shadow: 1px 2px 2px rgba(1, 25, 147, 0.65);
     margin: 3% 0% 3%;
     text-align: left;
