--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,15 +3,19 @@
 }
 
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s forwards;
+    animation: rotateY-anim 7s linear infinite;
+    height: 40vmin;
+    pointer-events: none;
   }
-}
+  @keyframes rotateY-anim {
+    0% {
+      transform: rotateY(0deg);
+    }
+
+    100% {
+      transform: rotateY(360deg);
+    }
+  }
 
 .App-header {
   background-image: url("https://media.contentapi.ea.com/content/dam/ea/madden-nfl/madden-nfl-22/homepage/common/eaplay-rewards-section-bg-xl.png.adapt.320w.png");
