--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,11 +2,15 @@
   text-align: center;
 }
 
+.App-title{
+  margin-top:1%;
+}
 .App-logo {
     animation: rotateY-anim 7s linear infinite;
     width: 135px;
     height: 210px;
     pointer-events: none;
+    margin-top: 15%;
   }
   @keyframes rotateY-anim {
     0% {
@@ -26,8 +30,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  /*justify-content: center;*/
+  /*font-size: calc(10px + 2vmin);*/
   color: white;
 }
 
