--- a/frontend/src/components/LegendCard.css
+++ b/frontend/src/components/LegendCard.css
@@ -3,9 +3,9 @@
     object-fit: fill;
     width: 250px;
     height: 350px;
-
+    border-radius: 12px;
 }
-.form {
+.front-form {
     display: inline-block;
     flex-direction: row;
     background-image: url("https://media.istockphoto.com/vectors/vector-cartoon-background-with-color-abstract-dots-vector-id1350036914?k=20&m=1350036914&s=612x612&w=0&h=OeFrkRXKxYKgM-1pBh0pNFscmlX2Rv45MZltFaIqw6A=");
@@ -18,9 +18,33 @@
     text-align: left;
     padding: 5px;
     max-width: 270px;
-    max-height:480px;
+    max-height:470px;
+    font-size: 7px;
 }
 
-.legend-property{
-    font-size: 12px;
+.CardPosterBack {
+    float: right;
+    padding-right: 24px;
+    max-height: 140px;
+    max-width: 120px;
+    border-radius: 50px;
+    box-shadow: 10px 20px 200px rgba(255, 255, 255, 0.65);
+}
+
+.back-form {
+    display: inline-block;
+    flex-direction: row;
+    background-image: url("https://i.pinimg.com/736x/8c/d3/7e/8cd37ef4e1140f8a2e4ac69254a3eb5e.jpg");
+    justify-content: center;
+    align-items: center;
+    border: 2px solid #544e4e;
+    border-radius: 12px;
+    box-shadow: 10px 20px 200px rgb(213, 122, 13);
+    margin: 3% 0% 3%;
+    text-align: left;
+    padding: 5px;
+    width: 254px;
+    height:439px;
+    font-family: Verdana;
+    font-size: 10px;
 }
