--- a/frontend/src/components/LegendCard.css
+++ b/frontend/src/components/LegendCard.css
@@ -19,13 +19,17 @@
     padding: 5px;
     max-width: 270px;
     max-height:470px;
-    font-size: 7px;
+    margin-bottom: 30px;
+}
+
+.legend-property {
+    font-size: 13px;
+    font-weight: bolder;
 }
 
 .CardPosterBack {
     float: right;
-
-    max-height: 120px;
+    max-height: 220px;
     max-width: 150px;
     border-radius: 50px;
     box-shadow: -10px -10px 115px rgb(161, 211, 148);
@@ -37,6 +41,7 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-image: url("https://media.istockphoto.com/vectors/vector-cartoon-background-with-color-abstract-dots-vector-id1350036914?k=20&m=1350036914&s=612x612&w=0&h=OeFrkRXKxYKgM-1pBh0pNFscmlX2Rv45MZltFaIqw6A=");
+    background-image: url("https://www.freeiconspng.com/thumbs/white-star-icon/white-star-icon-16.png");
     justify-content: center;
     align-items: center;
     border: 2px solid #544e4e;
@@ -45,8 +50,14 @@
     margin: 3% 0% 3%;
     text-align: left;
     padding: 5px;
-    width: 254px;
-    height:439px;
+    width: 263px;
+    height:433px;
     font-family: Verdana;
-    font-size: 10px;
+    font-size: 25px;
+    margin-bottom: 30px;
+}
+
+.back-form .legend-property{
+    font-size: 18px;
+    font-weight: bolder;
 }
